syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.grpc";
option java_outer_classname = "PingServiceProto";
option objc_class_prefix = "Ping";

package ping;

service PingService {
  rpc Ping(PingRequest) returns (PingResponse);
}

message PingRequest {
  string payload = 1;
}

message PingResponse {
  string payload = 1;
}
